fix table-info icons color in dark mode

--- a/ui/styles/app.less
+++ b/ui/styles/app.less
@@ -796,6 +796,7 @@ ul.sidebar {
     .table-info {
         .dt-buttons {
             .dt-button {
+                color: @darkFg;
                 &:hover {
                     color: @darkGrafitoPurple;
                 }
